src/apps/netbird/gateway-web.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird-web
  namespace: netbird
spec:
  parentRefs:
    - name: kube-gateway
      namespace: nginx-gateway
      sectionName: https-netbird
  hostnames:
    - "cloud.lxft.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: netbird-management
          port: 33073

    - matches:
        - path:
            type: PathPrefix
            value: /signal
      backendRefs:
        - name: netbird-signal
          port: 10000

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netbird-dashboard
          port: 80
